--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@babel/eslint-parser": "^7.18.9",
     "@babel/plugin-syntax-jsx": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.26.0",
