--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "framer-motion": "^9.0.4",
     "jest-snapshot": "^29.0.1",
+    "node-sass": "^7.0.3",
     "prop-types": "^15.8.1",
     "proptypes": "^1.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-native-redux": "^1.0.11",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
