--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.3",
     "react-native-redux": "^1.0.11",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
