--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "proptypes": "^1.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-countup": "^6.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.3",
@@ -23,6 +24,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll-trigger": "^0.6.14",
     "react-test-renderer": "^18.2.0",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
